# language-research

./: .gitignore  BEAM.md  C3.md  CLOJURE.md  COMMON_LISP.md  DLANG.md  ELIXIR.md  ELM.md  ERLANG.md  GO.md  JAVA.md  JAVA_QUARKUS.md  JAVA_SPRINGBOOT.md  LUA.md  PERL.md  RAKU.md  README.md  RUST.md  RUST_WASM.md  SCHEME.md  TCL.md  ZIG.md
.github/workflows/: lint.yml  nightly.yml  release.yml  test.yml
tutorials/: Makefile  PORTS.md  README.md  test-consistency.sh
tutorials/blackbox/: test-01-hello-world.sh  test-02-web-server.sh  test-03-cli.sh  test-04-tui.sh  test-05-concurrency.sh  test-06-logging.sh  test-07-metrics.sh  test-08-openapi.sh  test-09-health.sh
tutorials/c3/: Dockerfile.tutorial-env  flake.nix
tutorials/clojure/: Dockerfile.tutorial-env  flake.nix
tutorials/common-lisp/: Dockerfile.tutorial-env  flake.nix
tutorials/dlang/: Dockerfile.tutorial-env  flake.nix
tutorials/elixir/: Dockerfile.tutorial-env  flake.nix
tutorials/elm/: Dockerfile.tutorial-env  flake.nix
tutorials/erlang/: Dockerfile.tutorial-env  flake.nix
tutorials/golang/: Dockerfile.tutorial-env  flake.nix
tutorials/java/: flake.nix
tutorials/java-quarkus/: flake.nix
tutorials/java-springboot/: Dockerfile.tutorial-env  flake.nix
tutorials/lua/: flake.nix  (+1 more)
tutorials/rust-wasm/03-hello-cli/: Cargo.toml  Makefile  README.md  index.html
tutorials/rust-wasm/03-hello-cli/src/: lib.rs
tutorials/rust-wasm/09-hello-liveness-readiness-health/: Cargo.toml  Makefile  README.md  index.html
tutorials/rust-wasm/09-hello-liveness-readiness-health/src/: lib.rs
tutorials/rust/02-hello-web-server/: Cargo.toml  Makefile  README.md
tutorials/rust/02-hello-web-server/src/: lib.rs  main.rs
tutorials/rust/08-hello-openapi-schema/: Cargo.toml  Makefile  README.md
tutorials/rust/08-hello-openapi-schema/src/: lib.rs  main.rs
(+974 files in other folders)
