[package]
name = "hello-cli"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlElement", "HtmlInputElement", "Window",
    "KeyboardEvent",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
