[package]
name = "hello-liveness-readiness-health"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlElement", "Window",
    "Request", "RequestInit", "RequestMode", "Response",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
